3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Documentation tweaks.
 include/object.h: doxygen-like comments.
 Doxyfile: created with some defaults.
Ryo 2006-11-18

Rename fix_player to fix_object, since it works for other items.
 common/item.c living.c object.c
 include/define.h libproto.h skills.h
 server/apply.c attack.c c_misc.c c_object.c c_wiz.c disease.c gods.c
  login.c player.c plugins.c shop.c skills.c skill_util.c spell_attack.c
  spell_effect.c time.c
Ryo 2006-11-18


Fix bug #598649: Building apartments use multiple materials per tile
server/build_map.c: don't redo same floor.
----
socket/info.c: fix spurious logic, fix indent.
Ryo 2006-11-18

Tentative fix for bug #1519089: item cannot afford in container can be taken from store.
server/shop.c: do a real recursion in can_pay.
Ryo 2006-11-16

include\{treasure.h path.h face.h commands.h win32.h shstr.h timers.h
  config.h funcpoint.h object.h loader.h attack.h race.h newserver.h
  re-cmp.h living.h book.h plugproto.h player.h artifact.h material.h
  plugin.h spellist.h skills.h spells.h recipe.h god.h sounds.h map.h
  tod.h newclient.h}: Clean up anti-double-include mechanisms.
----
include/arch.h: Removing unused file.
include/Makefile.am: Remove reference to arch.h
common/arch.c: Remove reference to arch.h
Alex Schultz 2006-11-14

Fix bug #1573296: arena : spells with "target" doesn't works
server/spell_util.c: spell_find_dir should consider players when on battleground.
----
Fix bug #1594696: Altar created with creator - consecration
server/time.c: copy creator's level, as per behaviour before function rewrite.
Ryo 2006-11-13

doc/Developers/protocol: Add documentation about exp_table requestinfo